# ANSURR2

./: README.md  setup.cfg
src/ansurr/: ansurr.py  compare.py  cyrange.py  dssp.py  export_nef.py  functions.py  plot2D.py  rci_nef.py  rci_nef_dicts.py  rigidipy.py
src/ansurr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
