[metadata]
name = ansurr
version = 2.0.47
author = Nick J Fowler
author_email = nickjfowler0@gmail.com
description = ANSURR uses backbone chemical shifts to validate the accuracy of NMR protein structures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickjf/ansurr
project_urls =
    Bug Tracker = https://github.com/nickjf/ansurr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    numpy
    scipy
    matplotlib
    pynmrstar

include_package_data = True

[options.package_data]
* = *.txt,*.bin,*.json,*.jar
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ansurr = ansurr.ansurr:main
